--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mint",
+  "name": "mint-ui",
   "version": "0.1.0",
-  "private": true,
+  "license": "agpl",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.18.3",
+    "@solana/wallet-adapter-base": "^0.9.22",
+    "@solana/wallet-adapter-react": "^0.15.32",
+    "@solana/wallet-adapter-react-ui": "^0.9.31",
+    "@solana/web3.js": "^1.75.0",
     "autoprefixer": "10.4.14",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-loader-spinner": "^5.3.4",
+    "react-no-ssr": "^1.1.0",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.1"
+  },
+  "engines": {
+    "node": ">=14.7.0 <17.0.0"
   }
 }
